--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                                         <tr class="bod-bottom" >
                                             <td style="width: 100%;" colspan="3">
                                                 <p>
-                                                    <input type="checkbox" id="E-mail"  />
+                                                    <input type="checkbox" id="E-mail" class="{{#checkbox}}{{account_info.settlement_collection_by_email_yesno}}{{/checkbox}}" />
                                                     <label for="E-mail"> <strong>E-mail </strong> <br>
                                                         &nbsp; &nbsp; &nbsp; 電郵</label>
                                                   </p>
@@ -441,21 +441,21 @@
                                         <tr>
                                             <td class="bod-right" width="33%">
                                                 <p>
-                                                    <input type="checkbox" id="Direct"  />
+                                                    <input type="checkbox" id="Direct" class="{{#checkbox}}{{account_info.settlement_collection_by_mail_yesno}}+{{account_info.settlement_collection_in_person_yesno}}{{/checkbox}}" />
                                                     <label for="Direct"> <strong>Direct Mail</strong> <br>
                                                         &nbsp; &nbsp; &nbsp; 郵寄</label>
                                                   </p>
                                             </td>
                                             <td class="bod-right" width="33%">
                                                 <p>
-                                                    <input type="checkbox" id="Residential"  />
+                                                    <input type="checkbox" id="Residential" class="{{#checkbox}}{{account_info.settlement_collection_by_mail_yesno}}{{/checkbox}}" />
                                                     <label for="Residential"> <strong>Residential Address</strong> <br>
                                                         &nbsp; &nbsp; &nbsp; 住址</label>
                                                   </p>
                                             </td>
                                             <td width="33%">
                                                 <p>
-                                                    <input type="checkbox" id="Business"  />
+                                                    <input type="checkbox" id="Business" class="{{#checkbox}}{{account_info.settlement_collection_in_person_yesno}}{{/checkbox}}" />
                                                     <label for="Business"><strong>Business / Office Address </strong> <br>
                                                         &nbsp; &nbsp; &nbsp; 營業 / 辦公地址</label>
                                                   </p>
