add checkbox placeholder

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                                         <tr class="bod-bottom" >
                                             <td style="width: 100%;" colspan="3">
                                                 <p>
-                                                    <input type="checkbox" id="E-mail" class="{{#checkbox}}{{account_info.settlement_collection_by_email_yesno}}{{/checkbox}}" />
+                                                    <input type="checkbox" id="E-mail" class="{{account_info.settlement_collection_by_email_yesno_checkbox_class}}" />
                                                     <label for="E-mail"> <strong>E-mail </strong> <br>
                                                         &nbsp; &nbsp; &nbsp; 電郵</label>
                                                   </p>
