--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
         </div>
         <div class="clear break-after"></div>
 
-        
+        <div class="mt10">&nbsp;</div>
         <div class="dark  pad mt-15">
             SECTION B GENERAL INFORMATION 一般資料
         </div>
