--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                     <strong>Nationality</strong> <br>國籍:           
                                 </td>
                                 <td class=" bod-right" width="30%">
-                                    <strong>{{account_info.identification_country}}</strong>
+                                    <strong>{{account_info.identification_country_string}}</strong>
                                 </td>
                                 <td class="light bod-right" width="25%">
                                     <strong>Identity Card / Passport No.</strong><br>
