--- a/index.html
+++ b/index.html
@@ -1986,7 +1986,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                 <strong>XXXXXXXX</strong> 
             </span>
         </p>
-        <table width="100%" class="table mt-15">
+        <table width="100%" class="table mt-10">
             <tr>
                 <td width="5%"></td>
                 <td width="30%"><span class="bod-bottom">風險評估</span></td>
@@ -2059,7 +2059,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             <tr>
                 <td valign="top"  width="5%">2.</td>
                 <td colspan="3"  width="95%">
-                    <p>個人客戶風險</p>
+                   個人客戶風險
                     <table width="100%"> 
                         <tr>
                             <td width="25%">客戶從事什麼類型的企業 </td>
@@ -2151,7 +2151,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             <tr>
                 <td valign="top"  width="5%">3.</td>
                 <td colspan="3"  width="95%">
-                    <p>產品服務風險</p>
+                    產品服務風險
                     <table width="100%"> 
                         <tr>
                             <td width="25%">我們提供什麼樣的產品/服務可能容易牽涉到洗黑錢 </td>
@@ -2220,7 +2220,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             <tr>
                 <td valign="top"  width="5%">4.</td>
                 <td colspan="3"  width="95%">
-                    <p>其他</p>
+                    其他
                     <table width="100%"> 
                         <tr>
                             <td width="25%">客戶過往投資經驗</td>
@@ -2359,7 +2359,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                        </tr>
 
                     </table>
-                    <p>結論:</p>
+                   結論:
                     <p>高風險數量 <span class="bod-bottom m-width d-in" >
                         <strong>XXXXXXX</strong> 
                     </span> <spa</p>
@@ -2400,7 +2400,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                         </tr>
 
                     </table>
-                    <p class="mt-15">如屬高風險，由負責人員加簽:
+                    <p class="mt-10">如屬高風險，由負責人員加簽:
                     </p>
                     <p class="bod-bottom m-width d-in" >
                         <strong>XXXXXXX</strong> 
