added  page break

--- a/index.html
+++ b/index.html
@@ -2764,7 +2764,7 @@ disclosure statement
                     </div>
                 </div>
             </div>
-            <div class="clear break-after"></div> 
+            <div class="clear page-break"></div>  
 
     </div>
 </body>
