space in header

--- a/index.html
+++ b/index.html
@@ -2620,7 +2620,7 @@ disclosure statement
         <div class="clear break-after"></div>
         <div class="mt-15"></div>
 
-                    <div class="header">
+                    <div class="header mt-15">
                         <div class="head-left">
                             <img src="images/logo.jpg" alt="logo">
                         </div>
