--- a/index.html
+++ b/index.html
@@ -2013,11 +2013,12 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                                 <span>
                                     <input type="checkbox" id="1" class="" />
                                     <label for="1 "></label>
-                                  </span> &nbsp;  &nbsp; 
+                                  </span>                                   
+                                  
                                   <span>
                                     <input type="checkbox" id="2" class="" />
                                     <label for="2"></label>
-                                  </span> &nbsp;  &nbsp; 
+                                  </span>
                                   
                                   <span>
                                     <input type="checkbox" id="3" class="" />
