--- a/index.html
+++ b/index.html
@@ -2010,19 +2010,19 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                             </td>
                             <td width="30%">
 
-                                <span>
+                                <span class="d-in">
                                     <input type="checkbox" id="1" class="" />
-                                    <label for="1 "></label>
+                                    <label for="1 "> test1</label>
                                   </span>                                   
                                   
-                                  <span>
+                                  <span class="d-in">
                                     <input type="checkbox" id="2" class="" />
-                                    <label for="2"></label>
+                                    <label for="2">test2</label>
                                   </span>
                                   
-                                  <span>
+                                  <span class="d-in">
                                     <input type="checkbox" id="3" class="" />
-                                    <label for="3"></label>
+                                    <label for="3">test3</label>
                                   </span>
                             </td>
                         </tr>
