--- a/index.html
+++ b/index.html
@@ -2617,9 +2617,8 @@ disclosure statement
                         </div>
                     </div>
                     
-        <div class="clear break-after"></div>
-        <div class="mt-15"></div>
-
+        <div class="clear break-after">&nbsp;</div>
+           <div class="clear mt-15"></div>         
                     <div class="header mt-15">
                         <div class="head-left">
                             <img src="images/logo.jpg" alt="logo">
