--- a/index.html
+++ b/index.html
@@ -1833,7 +1833,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             <div class="head-left">
                 <img src="images/logo.jpg" alt="logo">
             </div>
-            <div class="head-right">
+            <div class="head-right" style="padding-top: 15px;">
                 <p>9/F Connaught Harbourfront House,<br>
                     35-36 Connaught Road West, Hong Kong<br>
                     香港干諾道西 35-36 號康諾維港大廈 9 樓<br>
