--- a/margin.html
+++ b/margin.html
@@ -2498,7 +2498,7 @@ disclosure statement
                 <strong>XXXXXXXX</strong> 
             </span>
         </p>
-        <table width="100%" class="table mt-10">
+        <table width="100%" class="table mt-10 page12">
             <tr>
                 <td width="5%"></td>
                 <td width="30%"><span class="bod-bottom">風險評估</span></td>
@@ -2924,8 +2924,6 @@ disclosure statement
         </table>
         
         <div class="page-footer">
-           
-
             <div class="foot-right">
                 <span class="pt-15">(06/2017) </span>
                 <div class="light-p pad">
