--- a/margin.html
+++ b/margin.html
@@ -776,7 +776,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <div class="dark-p  pad mt-15">
             <strong> SECTION C IDENTITY DECLARATION 身分聲明</strong>
         </div>
-        Is the Applicant 申請人是否
+        <p>Is the Applicant 申請人是否</p>
         <table width="100%"> 
             <tr>
                 <td width="5%" valign="top">(1)</td>
@@ -1158,8 +1158,9 @@ Acknowledgement Letter, form an integral part for the opening of the “Margin A
 客戶協議書、風險披露聲明及客戶確認信等作為本帳戶開戶組成之一部份，並確認已收訖一份已簽署的客戶協議書。
                 </td>
             </tr>
-            <tr>
-                <td width="3%" valign="top">2. </td>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
+            <tr class="mt-10">
+                <td width="3%" valign="top" >2. </td>
                 <td width="97%">
                     For the purpose of opening the “Margin Account”, The Client enclose the duly completed and signed Account Opening Information, address proof
                     and Client’s copies of Hong Kong Identity Cards / passport(s). <br>
@@ -1168,6 +1169,7 @@ Acknowledgement Letter, form an integral part for the opening of the “Margin A
 
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">3. </td>
                 <td width="97%">
@@ -1179,6 +1181,7 @@ the provisions of the “Agreement”. The Client undertake to advise “GPSL”
 
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">4. </td>
                 <td width="97%">
@@ -1228,6 +1231,7 @@ dealer. <br>
 
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">5. </td>
                 <td>
@@ -1240,6 +1244,7 @@ in the case of both oral, telephone and written instructions by any one of the A
 
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">6. </td>
                 <td>The Client agrees that all confirmations and statements in relation to the “Margin Account” issued by “GPSL” to the Client pursuant to the Agreement
@@ -1247,6 +1252,7 @@ in the case of both oral, telephone and written instructions by any one of the A
                     客戶(等)同意有關保證金帳戶項下之一切確認書及結單將對客戶(等)有絕對約束力。
                     </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">7. </td>
                 <td>
@@ -1255,6 +1261,7 @@ in the case of both oral, telephone and written instructions by any one of the A
 
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">8. </td>
                 <td>
