--- a/index.html
+++ b/index.html
@@ -1112,6 +1112,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                     本人(等)授權要求利盟證券有限公司 (“本公司”) 為本人(等) 以本人(等) 名義開立並操作一個現金證券交易帳戶(“帳戶”)，以執行本人(等)不時的指示由 貴司以代理人身份為本人(等) 購入、賣出、保管或處理各類證券。有關帳戶之運作須受本開戶授權書及現金客戶協議書規限，本人(等) 確認現金客戶協議書為本開戶授權書組成之一部份，並確認已收訖一份已簽署的現金客戶協議書。
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">2. </td>
                 <td width="97%">
@@ -1120,6 +1121,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">3. </td>
                 <td width="97%">
@@ -1128,6 +1130,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">4. </td>
                 <td width="97%">
@@ -1169,6 +1172,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">5. </td>
                 <td>
@@ -1177,12 +1181,14 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">6. </td>
                 <td>I/We agree that all confirmations and statements in relation to the Account issued by you to me/us pursuant to the Agreement shall be conclusive and binding on me/us.
                     本人(等)同意有關帳戶項下之一切確認書及結單將對本人(等)有絕對約束力。
                     </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">7. </td>
                 <td>
@@ -1190,6 +1196,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 本人(等) 選擇以現金形式經 貴司為代理人進行證券買賣。
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
             <tr>
                 <td width="3%" valign="top">8. </td>
                 <td>
