--- a/index.html
+++ b/index.html
@@ -1205,10 +1205,11 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 
                 </td>
             </tr>
+            <tr><td colspan="2" class="pad0" height="5px">&nbsp;</td></tr>
 
         </table>
 
-        <div class="clear"></div>
+        <div class="clear mt-15"></div>
         
         <div class="page-footer mt-15">
             <div class="light pad left" style="width: 15%;">
