--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             條款
         </p>
         </div>
-        <table width="100%" class="table">
+        <table width="100%" class="table linespace2">
             <tr>
                 <td width="3%" valign="top">1. </td>
                 <td width="97%">
