--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             </tr>
         </table>
 
-        <div class="dark   mt-15">
+        <div class="dark pad  mt-15">
             For Office Use (TO BE COMPLETED BY AE):
         </div>
 
