--- a/index.html
+++ b/index.html
@@ -1745,7 +1745,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         </div>
         <div class="clear break-after"></div>
         <div class="mt-15"></div>
-        <div class="mt-15 pad">
+        <div class="mt-15 pad linespace1-5">
             <p><strong>第 2 部 居留司法管轄區及稅務編號或具有等同功能的識辨編號(以下簡稱「稅務編號」) *</strong></p>
             提供以下資料，列明 (a) 帳戶持有人的居留司法管轄區，亦即帳戶持有人的稅務管轄區(香港包括在內)及 (b) 該居留
 司法管轄區發給帳戶持有人的稅務編號。列出<strong>所有</strong> 有（不限於 5 個）居留司法管轄區。
@@ -1756,7 +1756,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <p><strong>  理由 C – </strong>帳戶持有人毋須提供稅務編號。居留司法管轄區的主管機關不需要帳戶持有人披露稅務編號。</p>
         </div>
 
-        <table class="table" border="1" width="100%">
+        <table class="table linespace1-5" border="1" width="100%">
             <thead>
                 <tr>
                     <th>居留司法管轄區 </th>
@@ -1811,7 +1811,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 
             </tbody>
         </table>
-        <div class="mt-15">
+        <div class="mt-15 linespace1-5">
             <p><strong>第 3 部 聲明及簽署</strong></p>
             <p>本人知悉及同意，財務機構可根據《稅務條例》(第 112 章) 有關交換財務帳戶的法律條文，(a) 收集本表格所載資料
                 並可備存作自動交換財務帳戶資料用途及(b) 把該等資料和關於帳戶持有人及任何須申報帳戶的資料向香港特別行政
