--- a/index.html
+++ b/index.html
@@ -1756,7 +1756,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <p><strong>  理由 C – </strong>帳戶持有人毋須提供稅務編號。居留司法管轄區的主管機關不需要帳戶持有人披露稅務編號。</p>
         </div>
 
-        <table class="table linespace1-5" border="1" width="100%">
+        <table class="table mt-20 linespace1-5" border="1" width="100%">
             <thead>
                 <tr>
                     <th>居留司法管轄區 </th>
@@ -1811,7 +1811,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 
             </tbody>
         </table>
-        <div class="mt-15 linespace1-5">
+        <div class="mt-20 linespace1-5">
             <p><strong>第 3 部 聲明及簽署</strong></p>
             <p>本人知悉及同意，財務機構可根據《稅務條例》(第 112 章) 有關交換財務帳戶的法律條文，(a) 收集本表格所載資料
                 並可備存作自動交換財務帳戶資料用途及(b) 把該等資料和關於帳戶持有人及任何須申報帳戶的資料向香港特別行政
@@ -1835,7 +1835,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                     <strong>XXXXXXXX</strong>以授權人身分簽署這份表格，須夾附該援權書的核證副本。)
                 </span></p>
                 <p class="mt-15"># 刪去不適用者</p>
-                <div class="pad bod">
+                <div class="pad bod mt-20">
                     <strong>
                         警告：根據《稅務條例》第 80(2E) 條，如任何人在作出自我證明時，在明知一項陳述在要項上屬具誤導性、虛假或
 不正確，或罔顧一項陳述是否在要項上屬具誤導性、虛假或不正確下，作出該項陳述，即屬犯法。一經定罪，可處第
