--- a/index.html
+++ b/index.html
@@ -1821,8 +1821,8 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                 <p>本人會通知利盟證券有限公司，並會在情況發生改變後 30 日內，向利盟證券有限公司提交一份已適當更新的自我證
                     明表格。
                     </p>
-                <p><strong>本人聲明就本人所知所信，本表格內所填報的所有資料和聲明均屬真實、正確和完備。</strong></p>
-                <p class="mt-15">簽署 ：<span class="bod-bottom m-width d-in" >
+                <p class="mt-20"><strong>本人聲明就本人所知所信，本表格內所填報的所有資料和聲明均屬真實、正確和完備。</strong></p>
+                <p class="mt-20">簽署 ：<span class="bod-bottom m-width d-in" >
                     <strong>XXXXXXXX</strong>
                 </span></p>
                 <p>姓名 ： <span class="bod-bottom m-width d-in" >
