updated for sapce

--- a/index.html
+++ b/index.html
@@ -1477,7 +1477,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                 </tr>
                 
                 <tr><td colspan="4">&nbsp;</td></tr>
-                <tr class="mt-15">
+                <tr class="mt-20">
                     <td width="33%">
                         Remarks:
                     </td>
@@ -1520,7 +1520,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             <p class="text-center"><strong>自我證明表格 - 個人 </strong></p>
             <div class="bod pad">
             <strong>重要提示： </strong>
-                <ul style="padding-left: 20px; font-weight: bold;">
+                <ul class="mt-20"style="padding-left: 20px; font-weight: bold;">
                     <li>這是由帳戶持有人向申報財務機構提供的自我證明表格，以作自動交換財務帳戶資料用途。申報財務機構
                         可把收集所得的資料交給稅務局，稅務局會將資料轉交到另一稅務管轄區的稅務當局。 </li>
                     <li>如帳戶持有人的稅務居民身分有所改變，應盡快將所有變更通知申報財務機構。</li>
@@ -1825,7 +1825,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                 <p class="mt-20">簽署 ：<span class="bod-bottom m-width d-in" >
                     <strong>XXXXXXXX</strong>
                 </span></p>
-                <p>姓名 ： <span class="bod-bottom m-width d-in" >
+                <p class="mt-20">姓名 ： <span class="bod-bottom m-width d-in" >
                     <strong>XXXXXXXX</strong>
                 </span></p>
                 <p>身分 ： <span class="bod-bottom m-width d-in" >
@@ -1844,7 +1844,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                 </div>
         </div>
 
-        <div class="page-footer mt-15">
+        <div class="page-footer mt-20">
             <div class="foot-right">
                 <span class="pt-15"> </span>
                 <div class="light pad">
@@ -1853,7 +1853,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             </div>
         </div>
         <div class="clear break-after"></div>
-        <div class="mt-15"></div>
+        <div class="mt-20"></div>
 
         <div class="header mt-15">
             <div class="head-left">
