--- a/index.html
+++ b/index.html
@@ -1855,7 +1855,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <div class="clear break-after"></div>
         <div class="mt-20"></div>
 
-        <div class="header mt-15">
+        <div class="header mt-20">
             <div class="head-left">
                 <img src="images/logo.jpg" alt="logo">
             </div>
@@ -1866,7 +1866,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                     Tel : (852) 3701 3200 Fax : (852) 3102 1855</p>
             </div>
         </div>
-        <div>U.S. Tax Withholding and Reporting FATCA Return Sheet 
+        <div class="mt-15">U.S. Tax Withholding and Reporting FATCA Return Sheet 
             <div class="right "> 
                 <span class="d-in">日期(月/日/年) : <span class="bod-bottom  d-in m-width" >
                 <strong>XXXXXXXX</strong></span></span>  
@@ -1881,7 +1881,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                 <strong>XXXXXXXX</strong></span></span>  
            </div>
         </div>
-        <p>
+        <p class="mt-20">
             Please complete and sign this form. And provide the following documentation(s) to :</p>
             <p>請填寫並簽署此表格，連同以下所需文件一併交回:</p>
             <p>Grand Partners Securities Limited</p>
@@ -1891,7 +1891,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         </p>
         <p class="mt-15">To : Grand Partners Securities Limited</p>
         <p>致 : 利盟證券有限公司</p>
-        <table width="100%" border="1" class="table">
+        <table width="100%" border="1" class="table mt-20">
             <tr>
                 <td class="thbg">
                     Account Information 戶口資料
@@ -1944,7 +1944,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         </table>
 
         
-        <table width="100%" border="1" class="table mt-15">
+        <table width="100%" border="1" class="table mt-20">
             <tr>
                 <td class="thbg">
                     Declaration 聲明
@@ -1967,7 +1967,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             </tr>
 
         </table>
-        <div class="bod pad">
+        <div class="bod pad mt-20">
             <p>Signature of Customer 客戶簽署</p>
 
             <p class="mt-15">X &nbsp;  &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
@@ -1981,7 +1981,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             </p>
         </div>
 
-        <div class="page-footer mt-15">          
+        <div class="page-footer mt-20">          
 
             <div class="foot-right">
                 <span class="pt-15">(06/2017) </span>
@@ -1995,7 +1995,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <div class="mt-15"></div>
 
         
-        <div class="header mt-15">
+        <div class="header mt-20">
             <div class="head-left">
                 <img src="images/logo.jpg" alt="logo">
             </div>
