updated for sapce 10

--- a/index.html
+++ b/index.html
@@ -1746,7 +1746,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <div class="clear break-after"></div>
         <div class="mt-15"></div>
         <div class="mt-15 pad linespace1-5">
-            <p><strong>第 2 部 居留司法管轄區及稅務編號或具有等同功能的識辨編號(以下簡稱「稅務編號」) *</strong></p>
+            <p class="mt-20"><strong>第 2 部 居留司法管轄區及稅務編號或具有等同功能的識辨編號(以下簡稱「稅務編號」) *</strong></p>
             提供以下資料，列明 (a) 帳戶持有人的居留司法管轄區，亦即帳戶持有人的稅務管轄區(香港包括在內)及 (b) 該居留
 司法管轄區發給帳戶持有人的稅務編號。列出<strong>所有</strong> 有（不限於 5 個）居留司法管轄區。
 <p>如帳戶持有人是香港稅務居民，稅務編號是其香港身份證號碼。</p>
@@ -2553,7 +2553,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             </u></strong></p>
 
             <p class="mt-20 linespace2">In order to protect investors’ rights and interests, Securities and Futures Commission has set out requirements on
-                investor characterization relating to purchase of derivative products with the updated <Code of Conduct> effective
+                investor characterization relating to purchase of derivative products with the updated effective
                 on 4 Sep 2011. Under this regulation, customer should understand the nature and risks of derivative products prior to
                 the trade of derivative products.</p>
 
