--- a/margin.html
+++ b/margin.html
@@ -1313,7 +1313,9 @@ opinion if I so wish. <br>
             
         </div>
         <div class="pad">
-            <p>Executed as a deed on 簽訂作契約於: <span class="bod-bottom" style="width: 50%; display: inline-block;">XXXXXXXX</span>			(insert date 請填上日期)</p>
+            <p>Executed as a deed on 簽訂作契約於: <span class="bod-bottom" style="width: 50%; display: inline-block;">
+                <!--<strong>XXXXXXXX</strong>-->
+            </span>			(insert date 請填上日期)</p>
             <p>Signed and delivered by: 簽署、蓋印及交付：</p>
         </div>
         <table width="100%">
@@ -1568,7 +1570,7 @@ opinion if I so wish. <br>
                     </td>
                     <td width="33%">
                         <div class="bod-bottom">
-                             <strong>XXXXXXXX</strong>
+                             <!--<strong>XXXXXXXX</strong>-->
                           </div>
                     </td>
                     <td width="33%">
