--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,9 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
             
         </div>
         <div class="linespace1-5 pad">
-            <p>Executed as a deed on 簽訂作契約於: <span class="bod-bottom" style="width: 50%; display: inline-block;">XXXXXXXX</span>			(insert date 請填上日期)</p>
+            <p>Executed as a deed on 簽訂作契約於: <span class="bod-bottom" style="width: 50%; display: inline-block;">
+                <!--<strong>XXXXXXXX</strong>-->
+            </span>			(insert date 請填上日期)</p>
             <p>Signed and delivered by: 簽署、蓋印及交付：</p>
         </div>
         <table width="100%">
@@ -1256,12 +1258,20 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
 
                 <tr>
                     <td width="32%" >
-                        <div class="bod-bottom"><strong>XXXXXXXX</strong></div>
+                        <div class="bod-bottom">
+                            <!--<strong>XXXXXXXX</strong>-->
+                        </div>
                     </td>
-                    <td width="32%"><div class="bod-bottom"><strong>XXXXXXXX</strong></div></td>
+                    <td width="32%"><div class="bod-bottom">
+                        <!--<strong>XXXXXXXX</strong>-->
+                    </div></td>
                     <td width="32%">
-                        <div class="bod-bottom"><strong>XXXXXXXX</strong></div>
-                        CE No. 持牌代表中央編號: <span class="bod-bottom"><strong>XXXXXXXX</strong></span>
+                        <div class="bod-bottom">
+                            <!--<strong>XXXXXXXX</strong>-->
+                        </div>
+                        CE No. 持牌代表中央編號: <span class="bod-bottom">
+                        <!--<strong>XXXXXXXX</strong>-->
+                    </span>
                         </td>
                 </tr>
 
@@ -1284,12 +1294,16 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <table width="80%" class="mt-15">
             <tr>
                 <td width="30%">
-                    <div class="bod-bottom"><strong>XXXXXXXX</strong></div>
+                    <div class="bod-bottom">
+                        <!--<strong>XXXXXXXX</strong>-->
+                    </div>
                     Signature of licensed person 持牌人簽署
                 </td>
                 <td width="10%"></td>
                 <td width="30%">
-                    <div class="bod-bottom"><strong>XXXXXXXX</strong></div>
+                    <div class="bod-bottom">
+                        <!--<strong>XXXXXXXX</strong>-->
+                    </div>
                     Date 日期
                 </td>
             </tr>
@@ -1298,14 +1312,18 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <table width="80%" class="mt-15">
             <tr>
                 <td width="30%">
-                    <div class="bod-bottom"><strong>XXXXXXXX</strong></div>
+                    <div class="bod-bottom">
+                        <!--<strong>XXXXXXXX</strong>-->
+                    </div>
                     Name of licensed person (please print) <br>
 持牌人姓名（正楷）
 
                 </td>
                 <td width="10%"></td>
                 <td width="30%">
-                    <div class="bod-bottom"><strong>XXXXXXXX</strong></div>
+                    <div class="bod-bottom">
+                        <!--<strong>XXXXXXXX</strong>-->
+                    </div>
                     CE No.  <br>
 中央編號
 
@@ -1514,7 +1532,9 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         </div>
         
         <div class="clear pad mt-20" >
-            參考編號：<span class="bod-bottom d-in  m-width"><strong>XXXXXXXX</strong></span>
+            參考編號：<span class="bod-bottom d-in  m-width">
+            <!--<strong>XXXXXXXX</strong>-->
+        </span>
         </div>
         <div class="mt-15">
             <p class="text-center"><strong>自我證明表格 - 個人 </strong></p>
@@ -1634,7 +1654,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                 <td>郵政編碼 /郵遞區號碼 </td>
                 <td width="50%">
                     <div class="bod-bottom">
-                        <strong>XXXXXXXX</strong>
+                        <!--<strong>XXXXXXXX</strong>-->
                     </div>
                 </td>
             </tr> 
