--- a/margin.html
+++ b/margin.html
@@ -788,13 +788,13 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                             <td width="25%">
                                 
                                 <span>
-                                    <input type="checkbox" id="noApplicant" class="{{account_info.identity_declaration1_id_1_class}}" />
+                                    <input type="checkbox" id="noApplicant" class="{{</label>.identity_declaration1_id_1_class}}" />
                                     <label for="noApplicant">No 否</label>
                                 </span>
                             </td>
                             <td width="25%">
                                 <span>
-                                    <input type="checkbox" id="YesApplicant" class="{{account_info.identity_declaration1_id_999_class}}" />
+                                    <input type="checkbox" id="YesApplicant" class="{{account_info.identity_declaration1_id_999_checkbox_class}}" />
                                     <label for="YesApplicant">Yes 是, CE No 中央編號</label>
                                   </span>
                             </td>
@@ -818,13 +818,13 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                             <td width="25%">
                                 
                                 <span>
-                                    <input type="checkbox" id="nolicensed" class="{{account_info.identity_declaration2_id_1_class}}" />
+                                    <input type="checkbox" id="nolicensed" class="{{account_info.identity_declaration2_id_1_checkbox_class}}" />
                                     <label for="nolicensed">No 否</label>
                                 </span>
                             </td>
                             <td width="25%">
                                 <span>
-                                    <input type="checkbox" id="Yeslicensed" class="{{account_info.identity_declaration2_id_999_class}}" />
+                                    <input type="checkbox" id="Yeslicensed" class="{{account_info.identity_declaration2_id_999_checkbox_class}}" />
                                     <label for="Yeslicensed">Yes 是, Name 姓名: </label>
                                   </span>
                             </td>
