--- a/index.html
+++ b/index.html
@@ -2549,8 +2549,10 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                 </div>
             </div>
             <p class="mt-20">Dear Customer,</p>
-            <p class="mt-20"><strong><u>Re: Regulations on investor characterization relating to purchase of derivative products
-            </u></strong></p>
+            <p class="mt-20"><strong>
+                <u>Re: Regulations on investor characterization relating to purchase of derivative products
+            </u></strong>
+        </p>
 
             <p class="mt-20 linespace2">In order to protect investors’ rights and interests, Securities and Futures Commission has set out requirements on
                 investor characterization relating to purchase of derivative products with the updated effective
