--- a/margin.html
+++ b/margin.html
@@ -789,7 +789,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                                 
                                 <span>
                                    <!-- <input type="checkbox" id="noApplicant" class="{{</label>.identity_declaration1_id_1_class}}" />-->
-                                    <input type="checkbox" id="noApplicant" class="" />
+                                    <input type="checkbox" id="noApplicant" class={{account_info.identity_declaration1_id_1_class}}" />
                                     <label for="noApplicant">No 否</label>
                                 </span>
                             </td>
