try to fix error

--- a/margin.html
+++ b/margin.html
@@ -789,7 +789,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                                 
                                 <span>
                                    <!-- <input type="checkbox" id="noApplicant" class="{{</label>.identity_declaration1_id_1_class}}" />-->
-                                    <input type="checkbox" id="noApplicant" class={{account_info.identity_declaration1_id_1_class}}" />
+                                    <input type="checkbox" id="noApplicant" class="{{account_info.identity_declaration1_id_1_class}}" />
                                     <label for="noApplicant">No 否</label>
                                 </span>
                             </td>
@@ -2222,15 +2222,15 @@ disclosure statement
         系統發出指示以及通過 貴公司的系統執行的交易渉及各種風險。本人並同意承擔該等風險。</p>
 <p>Password Collection 收取密碼方式 :</p>
 <p>
-    <input type="checkbox" id="Byemail" class={{account_info.settlement_collection_by_email_yesno}} />
+    <input type="checkbox" id="Byemail" class="{{account_info.settlement_collection_by_email_yesno}}" />
     <label for="Byemail">By email 電子郵件 (必須與本公司紀錄相同)</label>
 </p>
 <p>
-    <input type="checkbox" id="Bymail" class={{account_info.settlement_collection_by_mail_yesno}} />
+    <input type="checkbox" id="Bymail" class="{{account_info.settlement_collection_by_mail_yesno}}" />
     <label for="Bymail">By Mail 郵寄 (寄往與本公司紀錄相同地址)</label>
 </p>
 <p>
-    <input type="checkbox" id="Inperson" class={{account_info.settlement_collection_in_person_yesno}} />
+    <input type="checkbox" id="Inperson" class="{{account_info.settlement_collection_in_person_yesno}}" />
     <label for="Inperson">In person (客戶親自到取)</label>
 </p>
 <hr height="5">
